- load users when opening page - auto user layout

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <span></span>
         <span></span>
      </div>
-     <div id="user-list"></div>
+     <div id="user-list">
+        <div class="user-item">Athalion</div>
+     </div>
 </body>
 <script src="network.js" type="module"></script>
 <script src="script.js" type="module"></script>
