added Popup Window

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
      <div id="user-list">
         <div class="user-item">Athalion</div>
      </div>
+     <!-- Popup Window -->
+     <div id="popup" class="popup hidden">
+         <div class="popup-content">
+             <span id="popup-close" class="popup-close">&times;</span>
+             <p id="popup-message">This is a popup message!</p>
+         </div>
+     </div>
 </body>
 <script src="network.js" type="module"></script>
 <script src="script.js" type="module"></script>
