--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div class="user-item">Athalion</div>
      </div>
      <!-- Popup Window -->
-     <div id="popup" class="popup hidden">
+     <div id="popup" class="popup show">
          <div class="popup-content">
-             <p id="popup-message">This is a popup message!</p>
+             <p id="popup-message">Connecting to server...</p>
          </div>
      </div>
 </body>
