--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
          </div>
      </div>
 </body>
+<script src="libs/jsbn.js"></script>
 <script src="network.js" type="module"></script>
 <script src="script.js" type="module"></script>
 <script src="user-manager.mjs" type="module"></script>
